--- a/app/views/communities/_form.html.erb
+++ b/app/views/communities/_form.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :code %><br>
+    <%= f.label :code, t("code") %><br>
     <%= f.text_field :code %>
   </div>
   <div class="field">
-    <%= f.label :name %><br>
+    <%= f.label :name, t("name") %><br>
     <%= f.text_field :name %>
   </div>
   <div class="actions">
