--- a/app/views/sponsorships/_form.html.erb
+++ b/app/views/sponsorships/_form.html.erb
@@ -16,12 +16,11 @@
     <%= f.text_field :school_year %>
   </div>
   <div class="field">
-    <%= f.label :sponsor_id %><br>
-    <%= f.number_field :sponsor_id %>
-  </div>
-  <div class="field">
-    <%= f.label :sponsor_code, 'Sponsor Code' %><br>
-    <%= f.text_field :sponsor_code %>
+  <%
+  sponsors_array = Sponsor.all.order("sponsors.code ASC").map{|s| ["#{s.try(:code)} - #{s.given_name} #{s.family_name}", s.id]}
+  sponsors_array.insert(0, ["", nil])
+  %>
+  <%= f.label :sponsor_id, t('sponsor') %><br><%= f.select(:sponsor_id, sponsors_array) %>
   </div>
   <div class="field">
     <%= f.label :number_children, 'Number of Children' %><br>
