--- a/app/views/families/edit.html.erb
+++ b/app/views/families/edit.html.erb
@@ -2,3 +2,6 @@
 <h1>Family</h1>
 
 <%= render 'form' %>
+<% if @user && @user.can_delete_record? %>
+<div class="delete-record"><%= link_to t('destroy'), @family, method: :delete, data: { confirm: t('confirm_destroy') } %></div>
+<% end %>
