--- a/app/views/families/show.html.erb
+++ b/app/views/families/show.html.erb
@@ -35,7 +35,7 @@
       <th>Relationship</th>
       <th>Active</th>
       <th>Primary</th>
-      <th colspan="1"></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -69,7 +69,7 @@
       <th>Date of Birth</th>
       <th>Status</th>
       <th>Gender</th>
-      <th colspan="1"></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -90,15 +90,15 @@
 </table>
 <% end %>
 
-<h3>Family Years</h3>
+<h3>School Years</h3>
 <%= link_to 'New', {controller: :family_years, action: :new, family_id: @family.id} %>
 
 <% if @family_years.present? %>
 <table>
   <thead>
     <tr>
-      <th>School Year</th>
-      <th colspan="3"></th>
+      <th>Family Years</th>
+      <th></th>
     </tr>
   </thead>
 
@@ -107,8 +107,6 @@
       <tr>
         <td><%= family_year.school_year %></td>
         <td><%= link_to 'Show', family_year %></td>
-        <td><%= link_to 'Edit', edit_family_year_path(family_year) %></td>
-        <td><%= link_to 'Destroy', family_year, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
