--- a/app/views/family_years/edit.html.erb
+++ b/app/views/family_years/edit.html.erb
@@ -5,3 +5,6 @@
 <h1>Editing Family Year</h1>
 
 <%= render 'form' %>
+<% if @user && @user.can_delete_record? %>
+<div class="delete-record"><%= link_to t('destroy'), @family_year, method: :delete, data: { confirm: t('confirm_destroy') } %></div>
+<% end %>
