--- a/app/views/sponsors/index.html.erb
+++ b/app/views/sponsors/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Listing Sponsors</h1>
+<%= link_to 'New', new_sponsor_path %> | <%= link_to 'Home', {controller: :welcome, action: :index} %>
+
+<h1>Sponsors</h1>
 
 <table>
   <thead>
@@ -9,8 +11,7 @@
       <th>Family Name</th>
       <th>Link</th>
       <th>City</th>
-
-      <th colspan="3"></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -24,15 +25,7 @@
         <td><%= sponsor.link %></td>
         <td><%= sponsor.city %></td>
         <td><%= link_to 'Show', sponsor %></td>
-        <td><%= link_to 'Edit', edit_sponsor_path(sponsor) %></td>
-        <td><%= link_to 'Destroy', sponsor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Sponsor', new_sponsor_path %>
-<br>
-<%= link_to 'Home', {controller: :welcome, action: :index} %>
